--- a/buildout.cfg
+++ b/buildout.cfg
@@ -33,8 +33,11 @@ environment-vars = zope_i18n_compile_mo_files true
 eggs =
     Plone
     Pillow
-    plone.reload
+    sauna.reload
     transmogrify.nitf
+
+zope-conf-additional =
+    %import sauna.reload
 
 [i18ndude]
 unzip = true
