Register utilities, fixed blueprint declations.

--- a/src/transmogrify/nitf/xmlimport.cfg
+++ b/src/transmogrify/nitf/xmlimport.cfg
@@ -1,18 +1,20 @@
 [transmogrifier]
 pipeline =
     sourcedirectory
-    xmlprocesor
+    xmlprocessor
+    archivefolders
     constructor
 
 [sourcedirectory]
-blueprint = collective.nitf.import.sourcedirectory
-directory = collective.nitf:data
+blueprint = transmogrify.nitf.import.sourcedirectory
+directory = transmogrify.nitf:data
+suffix = xml
 
 [xmlprocessor]
-blueprint = collective.transmogrifier.constructor
+blueprint = transmogrify.nitf.xmlsource.xmlprocessor
 
-[folders]
+[archivefolders]
 blueprint = collective.transmogrifier.sections.folders
 
 [constructor]
-blueprint = collective.transmogrifier.constructor
+blueprint = collective.transmogrifier.sections.constructor
