Added section to:  - generate the object path based on dates.  - publish the object.  - update the dexterity schema.

--- a/src/transmogrify/nitf/xmlimport.cfg
+++ b/src/transmogrify/nitf/xmlimport.cfg
@@ -2,8 +2,13 @@
 pipeline =
     sourcedirectory
     xmlprocessor
-    archivefolders
+    path-update
+    logger
+    folderarchive
     constructor
+    schemaupdater
+    state-inserter
+    workflowupdater
 
 [sourcedirectory]
 blueprint = transmogrify.nitf.import.sourcedirectory
@@ -12,9 +17,32 @@ suffix = xml
 
 [xmlprocessor]
 blueprint = transmogrify.nitf.xmlsource.xmlprocessor
+datestorage = True
 
-[archivefolders]
+[path-update]
+blueprint = collective.transmogrifier.sections.inserter
+key = string:_path
+value = python:"/articulos/{0}/{1}".format(item['effective'].strftime("%Y/%M/%d"), item['_path'])
+
+[folderarchive]
 blueprint = collective.transmogrifier.sections.folders
 
 [constructor]
 blueprint = collective.transmogrifier.sections.constructor
+
+[schemaupdater]
+blueprint = transmogrify.dexterity.schemaupdater
+
+[state-inserter]
+blueprint = collective.transmogrifier.sections.inserter
+key = string:_transitions
+value = string:publish
+
+[workflowupdater]
+blueprint = plone.app.transmogrifier.workflowupdater
+
+[logger]
+blueprint = collective.transmogrifier.sections.logger
+name = logger
+level = INFO
+key = _path
