Added new steps to exlude folders from the navigation. Create ATImages. Added new option to the xmlsource section to process the images from the filesystem insted download it from the network.

--- a/src/transmogrify/nitf/xmlimport.cfg
+++ b/src/transmogrify/nitf/xmlimport.cfg
@@ -3,10 +3,12 @@ pipeline =
     sourcedirectory
     xmlprocessor
     path-update
-    logger
     folderarchive
+    foldertitle
+    excludefromnav
+    atimage
     constructor
-    schemaupdater
+    schemaupdater-atct
     state-inserter
     workflowupdater
 
@@ -17,21 +19,44 @@ suffix = xml
 
 [xmlprocessor]
 blueprint = transmogrify.nitf.xmlsource.xmlprocessor
-datestorage = True
+directory = transmogrify.nitf:data/images
 
 [path-update]
 blueprint = collective.transmogrifier.sections.inserter
 key = string:_path
 value = python:"/articulos/{0}/{1}".format(item['effective'].strftime("%Y/%M/%d"), item['_path'])
+condition = python: item['_type'] in ['collective.nitf.content', 'Image']
 
 [folderarchive]
 blueprint = collective.transmogrifier.sections.folders
 
+[foldertitle]
+blueprint = collective.transmogrifier.sections.inserter
+key = string:title
+value = python:item['_path'].split('/')[-1]
+condition = python: item['_type']=='Folder'
+
+[excludefromnav]
+blueprint = collective.transmogrifier.sections.inserter
+key = string:excludeFromNav
+value = python:True
+condition = python: item['_type']=='Folder'
+
+[atimage]
+blueprint = plone.app.transmogrifier.mimeencapsulator
+field = string:image
+mimetype = python: item['_mimetype']
+condition = python: item['_type']=='Image'
+# wget -nc -x -i ~/Desktop/images.list
+
 [constructor]
 blueprint = collective.transmogrifier.sections.constructor
 
-[schemaupdater]
+[schemaupdater-dexterity]
 blueprint = transmogrify.dexterity.schemaupdater
+
+[schemaupdater-atct]
+blueprint = plone.app.transmogrifier.atschemaupdater
 
 [state-inserter]
 blueprint = collective.transmogrifier.sections.inserter
@@ -41,8 +66,14 @@ value = string:publish
 [workflowupdater]
 blueprint = plone.app.transmogrifier.workflowupdater
 
-[logger]
+[logger_title]
 blueprint = collective.transmogrifier.sections.logger
-name = logger
+name = logger_title
 level = INFO
-key = _path
+key = title
+
+[logger_type]
+blueprint = collective.transmogrifier.sections.logger
+name = logger_type
+level = INFO
+key = _type
