Addedd a new section to reindex object. Cleanup logger sections.

--- a/src/transmogrify/nitf/xmlimport.cfg
+++ b/src/transmogrify/nitf/xmlimport.cfg
@@ -11,6 +11,8 @@ pipeline =
     schemaupdater-atct
     state-inserter
     workflowupdater
+    reindexobject
+    logger
 
 [sourcedirectory]
 blueprint = transmogrify.nitf.import.sourcedirectory
@@ -66,14 +68,11 @@ value = string:publish
 [workflowupdater]
 blueprint = plone.app.transmogrifier.workflowupdater
 
-[logger_title]
-blueprint = collective.transmogrifier.sections.logger
-name = logger_title
-level = INFO
-key = title
+[reindexobject]
+blueprint = plone.app.transmogrifier.reindexobject
 
-[logger_type]
+[logger]
 blueprint = collective.transmogrifier.sections.logger
-name = logger_type
+name = process item:
 level = INFO
-key = _type
+key = _path
