Readded schemupdater for dexterity content type.

--- a/src/transmogrify/nitf/xmlimport.cfg
+++ b/src/transmogrify/nitf/xmlimport.cfg
@@ -8,6 +8,7 @@ pipeline =
     excludefromnav
     atimage
     constructor
+    schemaupdater-dexterity
     schemaupdater-atct
     state-inserter
     workflowupdater
