--- a/test-4.2.x.cfg
+++ b/test-4.2.x.cfg
@@ -1,21 +1,14 @@
 [buildout]
 extends =
-    http://svn.plone.org/svn/collective/buildout/plonetest/test-4.x.cfg
+    http://svn.plone.org/svn/collective/buildout/plonetest/test-4.2.x.cfg
     http://good-py.appspot.com/release/dexterity/1.2.1
-    sources.cfg
 
 package-name = transmogrify.nitf
 package-extras = [test]
 test-eggs = Pillow
 
-parts += omelette
-
-[instance]
-eggs += Pillow
-
-[omelette]
-recipe = collective.recipe.omelette
-eggs = ${instance:eggs}
-
 [test]
 defaults = ['-s', '${buildout:package-name}', '--auto-color', '--auto-progress']
+
+[versions]
+plone.supermodel = 1.1.1
